--- a/about.html
+++ b/about.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sandy's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="screens.css">
+    <link rel="stylesheet" type="text/css" href="/css/test.css" media="screen">
 </head>
 <body>
     <header>
@@ -13,9 +11,9 @@
     </header>
 
     <main>
-        <img src="/media/self.jpg" alt="self" width="360" height="360">
-        <p>Hello! I’m Sandy, a junior graphic designer based in Philadelphia</p>
-        <p>I’m a junior at Drexel University pursuing a major in Graphic Design and a minor in User Experience and Interaction and Fine Arts.</p>
+        <img src="/media/self.jpg" alt="self" width="900" height="360">
+        <p>Hello! I&#39;m Sandy, a junior graphic designer based in Philadelphia</p>
+        <p>I&#39;m a junior at Drexel University pursuing a major in Graphic Design and a minor in User Experience and Interaction and Fine Arts.</p>
         <p>My goal is to inspire positive change in people&#39;s lives through innovative and compassion-driven designs.</p>
         <p>Graphic design is almost always somewhere around us, it struck me to how life-changing and important design truly is! As someone who was always taught and interested in traditional art, graphics was cool because it combined both traditional art and the growing digital world. Being able to allow artists to story-tell and convey strong messages through visual and mental aspects, I felt a sense of comfort and balance in this space.</p>
         <p>
@@ -52,7 +50,7 @@
         <p><strong>Westphal College of Media Arts &amp; Design Instagram Takeover Project</strong>
             Designer (JAN 2024 - PRESENT)</p>
         <ul>
-            <li>Designed a series of connected posters, posts, and presentations for Drexel Westphal’s annual Instagram Takeover</li>
+            <li>Designed a series of connected posters, posts, and presentations for Drexel Westphal&#39;s annual Instagram Takeover</li>
         </ul>
         <p><strong>Persephone Books Brand &amp; Logo Redesign</strong>
             Researcher &amp; Designer (JAN 2024 - MAR 2024)</p>
@@ -62,7 +60,7 @@
         <p><strong>Westphal Pop-Up Shop T-Shirt &amp; Sticker Design</strong>
             Designer (AUG 2023 - JAN 2024)</p>
         <ul>
-            <li>Designed an original work to represent Drexel’s Performing Arts Program, and a sticker design to represent Drexel University.</li>
+            <li>Designed an original work to represent Drexel&#39;s Performing Arts Program, and a sticker design to represent Drexel University.</li>
         </ul>
     </main>
     
