--- a/craigslist.html
+++ b/craigslist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="screens.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/test.css" media="screen">
     <title>Sandy's Portfolio - Craigslist Redesign</title>
 </head>
 <body>
@@ -11,13 +11,12 @@
         <h2 id="craigslist">Craigslist</h2>
     </header>
 
-    <img src="/media/craigs_cover.jpg" alt="Craigslist cover" width="900" height="600">
-
     <main>
         <section>
+            <img src="/media/craigs_cover.jpg" alt="Craigslist cover" width="900" height="600">
             <h3>Onboarding Flow</h3>
             <p>
-                Enhancing navigation features for Craigslist’s online site and mobile app.
+                Enhancing navigation features for Craigslist&#39;s online site and mobile app.
                 <br><br>
                 <strong>Role:</strong> Solo UI/UX Designer<br>
                 <strong>Timeline:</strong> 20 weeks<br>
@@ -35,7 +34,7 @@
         <section>
             <h3>The Problem</h3>
             <p>
-                Craigslist’s website is outdated, with a lack of organized space and navigable categories. 
+                Craigslist&#39;s website is outdated, with a lack of organized space and navigable categories. 
                 Inexperienced users can find it overwhelming due to vague subcategories, while experienced 
                 users have adapted to its shortcomings. The mobile app shares these issues and adds 
                 difficulties in communication and trust with sellers. This project aimed to improve 
@@ -124,10 +123,10 @@
     </main>
 
     <footer>
-        <h4>
+        <h5>
             <a href="salt.html">Previous: Coffee Editorial</a> | 
             <a href="persephone.html">Next: Persephone Books</a>
-        </h4>
+        </h5>
         <p>
             <a href="index.html">Home</a> | 
             <a href="about.html">About</a>
