--- a/persephone.html
+++ b/persephone.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/test.css" media="screen">
     <title>Sandy's Portfolio - Persephone Books</title>
 </head>
 <body>
     <header>
         <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
         <h2 id="persephone-books">Persephone Books</h2>
-        <img src="/media/pb_cover.jpg" alt="Persephone Books Cover" width="900" height="600">
     </header>
 
     <main>
         <section>
+            <img src="/media/pb_cover.jpg" alt="Persephone Books Cover" width="900" height="600">
             <h3><strong>Persephone Books — Graphic Design</strong></h3>
             <p>
                 Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns.
@@ -29,7 +29,7 @@
         <section>
             <h3><strong>The Problem</strong></h3>
             <p>
-                <strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s an image of Persephone — but it didn’t seem iconic enough to be a recognizable mark.
+                <strong>Graphic Design Aspect:</strong> Persephone Books&#39; original logo is very simple — it&#39;s an image of Persephone — but it didn&#39;t seem iconic enough to be a recognizable mark.
             </p>
             <p>
                 <strong>UI/UX Aspect:</strong> The current website's cluttered and repetitive content, combined with a messy information hierarchy, creates a potentially overwhelming experience. The goal was to enhance the website and app's visual design while improving navigation and usability.
@@ -52,7 +52,7 @@
                 <strong>Changes?</strong> If given another chance, I would explore designs that retain Persephone Books' vintage aesthetic while modernizing functionality. I appreciate the vintage charm of their current branding and would love to experiment with merging that style with my redesign concepts.
             </p>
             <p>
-                Overall, I’m proud of how this project turned out. It pushed me to think outside the box and experiment with various features and designs. While there’s room for improvement, I believe my redesign effectively organizes the content and enhances usability while maintaining an aesthetically pleasing design.
+                Overall, I&#39;m proud of how this project turned out. It pushed me to think outside the box and experiment with various features and designs. While there&#39;s room for improvement, I believe my redesign effectively organizes the content and enhances usability while maintaining an aesthetically pleasing design.
             </p>
         </section>
 
@@ -66,10 +66,10 @@
     </main>
 
     <footer>
-        <p>
+        <h5>
             <a href="craigslist.html">Previous: Craigslist</a> | 
             <a href="salt.html">Next: Coffee Editorial</a>
-        </p>
+        </h5>
         <p>
             <a href="index.html">Home</a> | 
             <a href="about.html">About</a>
