--- a/salt.html
+++ b/salt.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/test.css" media="screen">
     <title>Sandy's Portfolio - SALT Editorial</title>
 </head>
 <body>
     <header>
         <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
         <h2 id="salt-editorial">SALT Editorial</h2>
-        <img src="/media/coffee_mockup.jpg" alt="Coffee Mockup for SALT Editorial" width="900" height="600">
     </header>
 
     <main>
         <section>
+            <img src="/media/coffee_mockup.jpg" alt="Coffee Mockup for SALT Editorial" width="900" height="600">
             <h3><strong>The Health Benefits of Coffee</strong></h3>
             <p>
                 Designing editorial spreads for a magazine through content development, masthead, and cover refinement.
@@ -36,7 +36,7 @@
         <section>
             <h3><strong>Problems I Encountered</strong></h3>
             <p>
-                The initial weeks were challenging as I didn’t have a clear direction for my publication. Through the class, I experimented with physical collaging and basic type placements. By weeks 6-7, I began to solidify the path for my design and layout.
+                The initial weeks were challenging as I didn&#39;t have a clear direction for my publication. Through the class, I experimented with physical collaging and basic type placements. By weeks 6-7, I began to solidify the path for my design and layout.
             </p>
         </section>
 
@@ -55,10 +55,10 @@
     </main>
 
     <footer>
-        <p>
+        <h5>
             <a href="persephone.html">Previous: Persephone Books</a> | 
             <a href="craigslist.html">Next: Craigslist</a>
-        </p>
+        </h5>
         <p>
             <a href="index.html">Home</a> | 
             <a href="about.html">About</a>
