--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/test.css" media="screen">
     <title>Sandy's Portfolio</title>
 </head>
 <body>
     <header>
         <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
         <h4>
-            Hey! I'm Sandy, a junior graphic &amp; UI/UX designer.
-            <br>Transforming imagination to design, one graphic at a time.
+            Welcome!
         </h4>
     </header>
 
