--- a/about.html
+++ b/about.html
@@ -58,10 +58,23 @@
             <li>Designed an original work to represent Drexel&#39;s Performing Arts Program, and a sticker design to represent Drexel University.</li>
         </ul>
     </main>
-    
     <footer>
-        <p><a href="index.html">Home</a> | <a href="about.html">About</a></p>
-        <p>&copy; 2024</p>
+        <section>
+            <h5>
+                <a href="index.html">Home</a>
+            </h5>
+        </section>
     </footer>
+    <footer>
+        <section>
+            <h5>
+                <a href="about.html">About</a>
+            </h5>
+        </section>
+    </footer>
+    
+<footer>
+    <p>© 2024 Sandy Chen</p>
+</footer>
 </body>
 </html>
