--- a/craigslist.html
+++ b/craigslist.html
@@ -123,15 +123,36 @@
     </main>
 
     <footer>
-        <h5>
-            <a href="salt.html">Previous: Coffee Editorial</a> | 
-            <a href="persephone.html">Next: Persephone Books</a>
-        </h5>
-        <p>
-            <a href="index.html">Home</a> | 
-            <a href="about.html">About</a>
-        </p>
-        <p>© 2024 Sandy Chen</p>
+        <section>
+            <h5>
+                <a href="persephone.html">Next: Persephone Books</a>
+            </h5>
+        </section>
     </footer>
+    <footer> 
+        <section>
+         <h5>
+             <a href="salt.html">Next: Coffee Editorial</a>
+         </h5>
+        </section>
+    </footer>
+    <footer>
+        <section>
+            <h5>
+                <a href="index.html">Home</a>
+            </h5>
+        </section>
+    </footer>
+    <footer>
+        <section>
+            <h5>
+                <a href="about.html">About</a>
+            </h5>
+        </section>
+    </footer>
+    
+<footer>
+    <p>© 2024 Sandy Chen</p>
+</footer>
 </body>
 </html>
