--- a/index.html
+++ b/index.html
@@ -41,11 +41,23 @@
         </section>
     </main>
 
-    <footer>
-        <p>
-            <a href="index.html">Home</a> | <a href="about.html">About</a>
-        </p>
-        <p>© 2024 Sandy Chen</p>
-    </footer>
+  <footer>
+      <section>
+          <h5>
+              <a href="index.html">Home</a>
+          </h5>
+      </section>
+  </footer>
+  <footer>
+      <section>
+          <h5>
+              <a href="about.html">About</a>
+          </h5>
+      </section>
+  </footer>
+  
+<footer>
+  <p>© 2024 Sandy Chen</p>
+</footer>
 </body>
 </html>
