--- a/salt.html
+++ b/salt.html
@@ -54,16 +54,38 @@
         </section>
     </main>
 
+
     <footer>
-        <h5>
-            <a href="persephone.html">Previous: Persephone Books</a> | 
-            <a href="craigslist.html">Next: Craigslist</a>
-        </h5>
-        <p>
-            <a href="index.html">Home</a> | 
-            <a href="about.html">About</a>
-        </p>
-        <p>© 2024 Sandy Chen</p>
+        <section>
+            <h5>
+                <a href="persephone.html">Previous: Persephone Books</a>
+            </h5>
+        </section>
     </footer>
+    <footer> 
+        <section>
+         <h5>
+            <a href="craigslist.html">Next: Craigslist</a>
+         </h5>
+        </section>
+    </footer>
+    <footer>
+        <section>
+            <h5>
+                <a href="index.html">Home</a>
+            </h5>
+        </section>
+    </footer>
+    <footer>
+        <section>
+            <h5>
+                <a href="about.html">About</a>
+            </h5>
+        </section>
+    </footer>
+    
+<footer>
+    <p>© 2024 Sandy Chen</p>
+</footer>
 </body>
 </html>
