--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <header>
-        <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
+        <h1 id="sandy-portfolio">
+            <a href="index.html" class="header-link">Sandy's Portfolio</a>
+        </h1>
         <h2 id="about">About</h2>
     </header>
 
@@ -61,18 +63,16 @@
     <footer>
         <section>
             <h5>
-                <a href="index.html">Home</a>
+                <a href="index.html" class="footer-btn">Home</a>
             </h5>
         </section>
-    </footer>
-    <footer>
         <section>
             <h5>
-                <a href="about.html">About</a>
+                <a href="about.html" class="footer-btn">About</a>
             </h5>
         </section>
     </footer>
-    
+
 <footer>
     <p>© 2024 Sandy Chen</p>
 </footer>
