--- a/craigslist.html
+++ b/craigslist.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+        <h1 id="sandy-portfolio">
+            <a href="index.html" class="header-link">Sandy's Portfolio</a>
+        </h1>
         <h2 id="craigslist">Craigslist</h2>
     </header>
 
@@ -122,37 +124,31 @@
         </section>
     </main>
 
-    <footer>
         <section>
             <h5>
-                <a href="persephone.html">Next: Persephone Books</a>
+                <a href="salt.html" class="footer-btn">Previous: Coffee Editorial</a>
             </h5>
         </section>
-    </footer>
-    <footer> 
         <section>
          <h5>
-             <a href="salt.html">Next: Coffee Editorial</a>
+             <a href="persephone.html" class="footer-btn">Next: Persephone Books</a>
          </h5>
         </section>
-    </footer>
-    <footer>
-        <section>
-            <h5>
-                <a href="index.html">Home</a>
-            </h5>
-        </section>
-    </footer>
-    <footer>
-        <section>
-            <h5>
-                <a href="about.html">About</a>
-            </h5>
-        </section>
-    </footer>
-    
+    <section>
+      <h5>
+        <a href="index.html" class="footer-btn">Home</a>
+      </h5>
+    </section>
+    <section>
+      <h5>
+        <a href="about.html" class="footer-btn">About</a>
+      </h5>
+    </section>
+
 <footer>
+  <section>
     <p>© 2024 Sandy Chen</p>
+  </section>
 </footer>
 </body>
 </html>
