--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+      <h1 id="sandy-portfolio">
+        <a href="index.html" class="header-link">Sandy's Portfolio</a>
+    </h1>
         <h4>
             Welcome!
         </h4>
@@ -15,7 +17,9 @@
 
     <main>
         <section>
-            <h3><a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a></h3>
+          <h3>
+            <a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a>
+          </h3>
             <p>
                 Redesigning their system for better navigation and flow.
                 <br><strong>Tools:</strong> Figma, Canva, Optimal Workshop
@@ -24,7 +28,8 @@
         </section>
 
         <section>
-            <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a></h3>
+            <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a>
+            </h3>
             <p>
                 Redesigning their logo and brand; redesigning their website.
                 <br><strong>Tools:</strong> Illustrator, Photoshop, Figma
@@ -33,7 +38,7 @@
         </section>
 
         <section>
-            <h3><a href="salt.html">Coffee Editorial</a></h3>
+          <h3><a href="salt.html">Coffee Editorial</a></h3>
             <p>
                 <strong>Tools:</strong> InDesign, Photoshop, Illustrator
             </p>
@@ -42,22 +47,22 @@
     </main>
 
   <footer>
-      <section>
-          <h5>
-              <a href="index.html">Home</a>
-          </h5>
-      </section>
-  </footer>
-  <footer>
-      <section>
-          <h5>
-              <a href="about.html">About</a>
-          </h5>
-      </section>
-  </footer>
-  
+    <section>
+      <h5>
+        <a href="index.html" class="footer-btn">Home</a>
+      </h5>
+    </section>
+    <section>
+      <h5>
+        <a href="about.html" class="footer-btn">About</a>
+      </h5>
+    </section>
+    </footer>
+
 <footer>
-  <p>© 2024 Sandy Chen</p>
+  <section>
+    <p>© 2024 Sandy Chen</p>
+  </section>
 </footer>
 </body>
 </html>
