--- a/persephone.html
+++ b/persephone.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <header>
-        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
-        <h2 id="persephone-books">Persephone Books</h2>
+        <h1 id="sandy-portfolio">
+            <a href="index.html" class="header-link">Sandy's Portfolio</a>
+        </h1>
+    <h2 id="persephone-books">Persephone Books</h2>
     </header>
 
     <main>
@@ -65,34 +67,26 @@
         </section>
     </main>
 
-    <footer>
         <section>
             <h5>
-                <a href="craigslist.html">Previous: Craigslist</a>
+                <a href="craigslist.html"  class="footer-btn">Previous: Craigslist</a>
             </h5>
         </section>
-    </footer>
-    <footer> 
         <section>
          <h5>
-             <a href="salt.html">Next: Coffee Editorial</a>
+             <a href="salt.html"  class="footer-btn">Next: Coffee Editorial</a>
          </h5>
         </section>
-    </footer>
-    <footer>
         <section>
             <h5>
-                <a href="index.html">Home</a>
+                <a href="index.html"  class="footer-btn">Home</a>
             </h5>
         </section>
-    </footer>
-    <footer>
         <section>
             <h5>
-                <a href="about.html">About</a>
+                <a href="about.html"  class="footer-btn">About</a>
             </h5>
         </section>
-    </footer>
     
 <footer>
     <p>© 2024 Sandy Chen</p>
