--- a/salt.html
+++ b/salt.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+        <h1 id="sandy-portfolio">
+            <a href="index.html" class="header-link">Sandy's Portfolio</a>
+        </h1>
         <h2 id="salt-editorial">SALT Editorial</h2>
     </header>
 
@@ -54,35 +56,26 @@
         </section>
     </main>
 
-
-    <footer>
         <section>
             <h5>
-                <a href="persephone.html">Previous: Persephone Books</a>
+                <a href="persephone.html"  class="footer-btn">Previous: Persephone Books</a>
             </h5>
         </section>
-    </footer>
-    <footer> 
         <section>
          <h5>
-            <a href="craigslist.html">Next: Craigslist</a>
+            <a href="craigslist.html"  class="footer-btn">Next: Craigslist</a>
          </h5>
         </section>
-    </footer>
-    <footer>
         <section>
             <h5>
-                <a href="index.html">Home</a>
+                <a href="index.html"  class="footer-btn">Home</a>
             </h5>
         </section>
-    </footer>
-    <footer>
         <section>
             <h5>
-                <a href="about.html">About</a>
+                <a href="about.html"  class="footer-btn">About</a>
             </h5>
         </section>
-    </footer>
     
 <footer>
     <p>© 2024 Sandy Chen</p>
